# django-admin-cursor-paginator

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
admin_cursor_paginator/: __init__.py  admin.py  cursor.py  paginator.py  views.py
admin_cursor_paginator/templates/admin_cursor_paginator/: change_list.html  pagination.html
admin_cursor_paginator/templatetags/: admin_cursor_paginator_tags.py
testproject/: requirements.txt  test.sqlite3
testproject/catalog/: admin.py  models.py
testproject/catalog/migrations/: 0001_initial.py
testproject/testproject/: settings.py  urls.py
