[metadata]
name = django-admin-cursor-paginator
version = attr: admin_cursor_paginator.version.__version__
description = Drop-in replacement for django admin default pagination that works fast with huge tables.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ilya Melnitskiy
author_email = mortas.11@gmail.com
url = https://github.com/a1tus/django-admin-cursor-paginator
download_url = https://pypi.org/project/django-admin-cursor-paginator/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
#install_requires = Django >= 2.0
packages = find:
include_package_data = true
zip_safe = false